Feature : front - init first page
- /init
- save access token and refresh token into local storage

--- a/res/mainPage.html
+++ b/res/mainPage.html
@@ -1,1 +1,17 @@
-mainpage
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>TimeTutor</title>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.0/jquery.min.js"></script>
+</head>
+<body>
+    <script src="/js/mainPage.js"></script>
+    <script>
+        initPage();      
+    </script>
+
+    <button id="loginBtn" >Login</button>
+</body>
+</html>
