Test : check token

--- a/res/mainPage.html
+++ b/res/mainPage.html
@@ -13,5 +13,6 @@
     </script>
 
     <button id="loginBtn" >Login</button>
+    <button onclick="checkLogin()" id="checkLoginBtn" >CheckLogin</button>
 </body>
 </html>
