--- a/res/mainPage.html
+++ b/res/mainPage.html
@@ -9,6 +9,7 @@
     <title>Time Tutor</title>
 
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.0/jquery.min.js"></script>
+    <script src="/res/js/utils.js"></script>
     <script src="/res/js/mainPage.js"></script>
     <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/carousel/">
     <!-- Bootstrap core CSS -->
@@ -34,11 +35,6 @@
     <!-- Custom styles for this template -->
     <link href="/res/css/carousel.css" rel="stylesheet">
   </head>
-
-  <script>
-    initPage();      
-    checkMainPageLogin();
-  </script>
 <body>  
 <header>
   <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
@@ -72,11 +68,7 @@
 </header>
 
 <main>
-
- 
-  <body>
-    <iframe src="/res/managerPage.html" width="100%" height="840px" frameborder="0" id="iframe"></iframe>
-    </body>
+  <iframe src="/res/managerPage.html" width="100%" height="840px" frameborder="0" id="iframe"></iframe>
 
   <!-- FOOTER -->
   <footer class="container">
@@ -85,9 +77,15 @@
   </footer>
 </main>
 
+  <script src="/res/assets/dist/js/bootstrap.bundle.min.js"></script>
 
-    <script src="/res/assets/dist/js/bootstrap.bundle.min.js"></script>
-
-      
-  </body>
+  <script>
+    document.addEventListener("DOMContentLoaded", function() {
+      initPage();      
+      checkMainPageLogin();
+  });
+  
+  </script>
+  
 </html>
+
