--- a/res/managerPage.html
+++ b/res/managerPage.html
@@ -1,4 +1,4 @@
-
+<script id="utils"  src="/res/js/utils.js"></script>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.min.css" rel="stylesheet">
 <style type="text/css">
     	body{margin-top:20px;}
@@ -103,14 +103,14 @@ Vanessa Tucker
         <div id="sampleYouText"> Lorem ipsum dolor sit amet, vis erat denique in, dicunt prodesset te vix.</div>
         </div>
     </div>
-<div id="sampleMe" class="chat-message-left pb-4" style="visibility: hidden;">
+<div id="sampleTeacher" class="chat-message-left pb-4" style="visibility: hidden;">
 <div>
 <img src="https://bootdey.com/img/Content/avatar/avatar3.png" class="rounded-circle mr-1" alt="Sharon Lessman" width="40" height="40">
 <div class="text-muted small text-nowrap mt-2 time"></div>
 </div>
 <div class="flex-shrink-1 bg-light rounded py-2 px-3 ml-3">
 <div  class="font-weight-bold mb-1">Sharon Lessman</div>
-<div id="sampleMeText">Sit meis deleniti eu, pri vidit meliore docendi ut, an eum erat animal commodo.</div>
+<div id="sampleTeacherText">Sit meis deleniti eu, pri vidit meliore docendi ut, an eum erat animal commodo.</div>
 </div>
 </div>
 
@@ -128,6 +128,13 @@ Vanessa Tucker
 </main>
 <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/js/bootstrap.bundle.min.js"></script>
-<script src="/res/js/managerPage.js"></script>
+<script id="manager" src="/res/js/managerPage.js"></script>
+<script>
+    function init(){
+        getPreviousMessage();
+    }
+    window.document.getElementById("manager").onload=init();
+
+</script>
 
 </body>
