Feature : create button menu

--- a/res/mainPage.html
+++ b/res/mainPage.html
@@ -46,13 +46,13 @@
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav me-auto mb-2 mb-md-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link active" aria-current="page" href="/">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/manager">Tutor Manager</a>
+            <a class="nav-link comming-soon" >App Download</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/schedular" tabindex="-1">Schedule Wizard</a>
+            <a class="nav-link comming-soon" tabindex="-1">Upload File</a>
           </li>
         </ul>
         <li class="nav-link active" id="welcomeText" style="display: none;">Welcome! </li>    
