--- a/res/managerPage.html
+++ b/res/managerPage.html
@@ -85,9 +85,6 @@ Vanessa Tucker
 <div class="text-muted small"><em>Teacher</em></div>
 </div>
 <div>
-<button class="btn btn-primary btn-lg mr-1 px-3"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-phone feather-lg"><path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"></path></svg></button>
-<button class="btn btn-info btn-lg mr-1 px-3 d-none d-md-inline-block"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-video feather-lg"><polygon points="23 7 16 12 23 17 23 7"></polygon><rect x="1" y="5" width="15" height="14" rx="2" ry="2"></rect></svg></button>
-<button class="btn btn-light border btn-lg px-3"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-more-horizontal feather-lg"><circle cx="12" cy="12" r="1"></circle><circle cx="19" cy="12" r="1"></circle><circle cx="5" cy="12" r="1"></circle></svg></button>
 </div>
 </div>
 </div>
@@ -100,7 +97,7 @@ Vanessa Tucker
         </div>
         <div class="flex-shrink-1 bg-light rounded py-2 px-3 mr-3">
         <div class="font-weight-bold mb-1">You</div>
-        <div id="sampleYouText"> Lorem ipsum dolor sit amet, vis erat denique in, dicunt prodesset te vix.</div>
+        <div id="sampleYouText" > Lorem ipsum dolor sit amet, vis erat denique in, dicunt prodesset te vix.</div>
         </div>
     </div>
 <div id="sampleTeacher" class="chat-message-left pb-4" style="visibility: hidden;">
@@ -116,11 +113,37 @@ Vanessa Tucker
 
 
 </div>
+
 <div class="flex-grow-0 py-3 px-4 border-top">
-    <div class="input-group">
-    <input id="chatInput" type="text" class="form-control" placeholder="Type your message" onKeyPress="if( event.keyCode==13 ){inputText();}">
-    <button id="sendButton"class="btn btn-primary">Send</button>
-</div>
+    <div class="input-group" id="qnaArea" style="text-align: center;">
+        <input id="chatInput" type="text" style="padding:7px;border:1px solid darkgray; height:6%;width: 78%;border-radius: 7px;" placeholder="Type your message" onKeyPress="if( event.keyCode==13 ){inputText();}">
+        <button id="sendButton"class="btn btn-primary">Send</button>
+        <button onclick="changeTo('menu')" class="btn btn-primary" style="width: 10%;">X</button>
+    </div>
+    <div id="buttonMenueArea" style="text-align: center;">
+        <button id="qnaMakingBtn" onclick="qnaMakingBtnClick()"class="btn btn-primary btn-lg mr-1 px-3"> Make QnA</button>
+        <button id="reschedulingBtn" onclick="rescheduleBtnClick()" class="btn btn-info btn-lg mr-1 px-3 d-none d-md-inline-block">ReScheduleing Alarm</button>
+        <button id="qnaBtn" onclick="qnaBtnClick()"class="btn btn-primary btn-lg mr-1 px-3"> QnA</button>
+        <button id="guideBtn" onclick="guildBtnClick()" class="btn btn-light border btn-lg px-3">Guide</button>
+    </div>
+
+    <div id="qnaMakingArea"style="text-align: center;" >
+        <input id="questionInput" type="text" class="form-control" placeholder="Type your Question" onKeyPress="if( event.keyCode==13 ){inputText();}">
+        <input id="answerInput" style="margin-top: 10px;margin-bottom: 10px;" type="text" class="form-control" placeholder="Type your Answer" onKeyPress="if( event.keyCode==13 ){inputText();}">
+        <button id="sendButton"class="btn btn-primary" style="width: 85%;">Send</button>
+        <button onclick="changeTo('menu')" class="btn btn-primary" style="width: 10%;">X</button>
+    </div>
+
+    <div id="rescheduleArea" style="text-align: center;">
+        <input id="times1" class="btn " style="width: 100px; border-color:darkgrey" placeholder="ex. 17:00"></input>
+        <input id="times2" class="btn "style="width: 100px;border-color:darkgrey" placeholder="ex. 17:00"></input>
+        <input id="times3" class="btn " style="width: 100px;border-color:darkgrey"placeholder="ex. 17:00"></input>
+        <input id="times4" class="btn " style="width: 100px;border-color:darkgrey"placeholder="ex. 17:00"></input>
+        <input id="times5" class="btn " style="width: 100px;border-color:darkgrey"placeholder="ex. 17:00"></input>
+        <button onclick="timeset" class="btn btn-primary" style="width: 50px;">OK</button>
+        <button onclick="changeTo('menu')" class="btn btn-primary" style="width: 40px;border-color:darkgrey">X</button>
+    </div>
+
 </div>
 </div>
 </div>
@@ -132,6 +155,7 @@ Vanessa Tucker
 <script>
     function init(){
         getPreviousMessage();
+        changeTo("menu");
     }
     window.document.getElementById("manager").onload=init();
 
