--- a/res/mainPage.html
+++ b/res/mainPage.html
@@ -68,7 +68,7 @@
 </header>
 
 <main>
-  <iframe src="/res/managerPage.html" width="100%" height="840px" frameborder="0" id="iframe"></iframe>
+  <iframe src="/res/tutorChat.html" width="100%" height="840px" frameborder="0" id="iframe"></iframe>
 
   <!-- FOOTER -->
   <footer class="container">
