--- a/res/tutorChat.html
+++ b/res/tutorChat.html
@@ -67,7 +67,7 @@
 <div class="d-flex align-items-start">
 <img src="https://bootdey.com/img/Content/avatar/avatar3.png" class="rounded-circle mr-1" alt="Vanessa Tucker" width="40" height="40">
 <div class="flex-grow-1 ml-3">
-Vanessa Tucker
+Time tutor
 <div class="small"><span class="fas fa-circle chat-online"></span> Online</div>
 </div>
 </div>
@@ -81,8 +81,8 @@ Vanessa Tucker
 <img src="https://bootdey.com/img/Content/avatar/avatar3.png" class="rounded-circle mr-1" alt="Sharon Lessman" width="40" height="40">
 </div>
 <div class="flex-grow-1 pl-3">
-<strong>Sharon Lessman</strong>
-<div class="text-muted small"><em>Teacher</em></div>
+<strong>Time tutor</strong>
+<div class="text-muted small"><em>Tutor</em></div>
 </div>
 <div>
 </div>
@@ -100,14 +100,14 @@ Vanessa Tucker
         <div id="sampleYouText" > Lorem ipsum dolor sit amet, vis erat denique in, dicunt prodesset te vix.</div>
         </div>
     </div>
-<div id="sampleTeacher" class="chat-message-left pb-4" style="visibility: hidden;">
+<div id="sampleTutor" class="chat-message-left pb-4" style="visibility: hidden;">
 <div>
 <img src="https://bootdey.com/img/Content/avatar/avatar3.png" class="rounded-circle mr-1" alt="Sharon Lessman" width="40" height="40">
 <div class="text-muted small text-nowrap mt-2 time"></div>
 </div>
 <div class="flex-shrink-1 bg-light rounded py-2 px-3 ml-3">
-<div  class="font-weight-bold mb-1">Sharon Lessman</div>
-<div id="sampleTeacherText">Sit meis deleniti eu, pri vidit meliore docendi ut, an eum erat animal commodo.</div>
+<div  class="font-weight-bold mb-1">Time Tutor</div>
+<div id="sampleTutorText">Sit meis deleniti eu, pri vidit meliore docendi ut, an eum erat animal commodo.</div>
 </div>
 </div>
 
@@ -151,13 +151,17 @@ Vanessa Tucker
 </main>
 <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/js/bootstrap.bundle.min.js"></script>
-<script id="manager" src="/res/js/managerPage.js"></script>
+<script id="script1" src="/res/js/chat.js"></script>
+<script id="script2" src="/res/js/tutorChat.js"></script>
 <script>
     function init(){
-        getPreviousMessage();
+        if (checkAuthToken())
+            getPreviousMessage();
+        else
+            sayToGuest();
         changeTo("menu");
     }
-    window.document.getElementById("manager").onload=init();
+    window.document.getElementById("script2").onload=init();
 
 </script>
 
