--- a/res/tutorChat.html
+++ b/res/tutorChat.html
@@ -117,7 +117,7 @@ Time tutor
 <div class="flex-grow-0 py-3 px-4 border-top">
     <div class="input-group" id="qnaArea" style="text-align: center;">
         <input id="chatInput" type="text" style="padding:7px;border:1px solid darkgray; height:6%;width: 78%;border-radius: 7px;" placeholder="Type your message" onKeyPress="if( event.keyCode==13 ){inputText();}">
-        <button id="sendButton"class="btn btn-primary">Send</button>
+        <button onclick="sendAnswer()"  class="btn btn-primary">Send</button>
         <button onclick="changeTo('menu')" class="btn btn-primary" style="width: 10%;">X</button>
     </div>
     <div id="buttonMenueArea" style="text-align: center;">
@@ -130,17 +130,17 @@ Time tutor
     <div id="qnaMakingArea"style="text-align: center;" >
         <input id="questionInput" type="text" class="form-control" placeholder="Type your Question" onKeyPress="if( event.keyCode==13 ){inputText();}">
         <input id="answerInput" style="margin-top: 10px;margin-bottom: 10px;" type="text" class="form-control" placeholder="Type your Answer" onKeyPress="if( event.keyCode==13 ){inputText();}">
-        <button id="sendButton"class="btn btn-primary" style="width: 85%;">Send</button>
+        <button onclick="sendQnA()" class="btn btn-primary" style="width: 85%;">Send</button>
         <button onclick="changeTo('menu')" class="btn btn-primary" style="width: 10%;">X</button>
     </div>
 
     <div id="rescheduleArea" style="text-align: center;">
-        <input id="times1" class="btn " style="width: 100px; border-color:darkgrey" placeholder="ex. 17:00"></input>
-        <input id="times2" class="btn "style="width: 100px;border-color:darkgrey" placeholder="ex. 17:00"></input>
-        <input id="times3" class="btn " style="width: 100px;border-color:darkgrey"placeholder="ex. 17:00"></input>
-        <input id="times4" class="btn " style="width: 100px;border-color:darkgrey"placeholder="ex. 17:00"></input>
-        <input id="times5" class="btn " style="width: 100px;border-color:darkgrey"placeholder="ex. 17:00"></input>
-        <button onclick="timeset" class="btn btn-primary" style="width: 50px;">OK</button>
+        <input class="btn timeText" style="width: 100px; border-color:darkgrey" placeholder="ex. 17:00"></input>
+        <input class="btn timeText"style="width: 100px;border-color:darkgrey" placeholder="ex. 17:00"></input>
+        <input class="btn timeText" style="width: 100px;border-color:darkgrey"placeholder="ex. 17:00"></input>
+        <input class="btn timeText" style="width: 100px;border-color:darkgrey"placeholder="ex. 17:00"></input>
+        <input class="btn timeText" style="width: 100px;border-color:darkgrey"placeholder="ex. 17:00"></input>
+        <button onclick="sendTimeSet()" class="btn btn-primary" style="width: 50px;">OK</button>
         <button onclick="changeTo('menu')" class="btn btn-primary" style="width: 40px;border-color:darkgrey">X</button>
     </div>
 
