Feature : set qna, set alarm, delete qna
- add Model : qna, alarm

--- a/res/tutorChat.html
+++ b/res/tutorChat.html
@@ -109,6 +109,7 @@ Time tutor
 <div  class="font-weight-bold mb-1">Time Tutor</div>
 <div id="sampleTutorText">Sit meis deleniti eu, pri vidit meliore docendi ut, an eum erat animal commodo.</div>
 </div>
+<button style="display: none;" onclick="deleteQnA(this)" data="" class="btn btn-primary deleteBtn">Delete</button>
 </div>
 
 
@@ -124,7 +125,7 @@ Time tutor
         <button id="qnaMakingBtn" onclick="qnaMakingBtnClick()"class="btn btn-primary btn-lg mr-1 px-3"> Make QnA</button>
         <button id="reschedulingBtn" onclick="rescheduleBtnClick()" class="btn btn-info btn-lg mr-1 px-3 d-none d-md-inline-block">ReScheduleing Alarm</button>
         <button id="qnaBtn" onclick="qnaBtnClick()"class="btn btn-primary btn-lg mr-1 px-3"> QnA</button>
-        <button id="guideBtn" onclick="guildBtnClick()" class="btn btn-light border btn-lg px-3">Guide</button>
+        <button id="guideBtn" onclick="guideBtnClick()" class="btn btn-light border btn-lg px-3">Guide</button>
     </div>
 
     <div id="qnaMakingArea"style="text-align: center;" >
