--- a/res/tutorChat.html
+++ b/res/tutorChat.html
@@ -117,7 +117,7 @@ Time tutor
 
 <div class="flex-grow-0 py-3 px-4 border-top">
     <div class="input-group" id="qnaArea" style="text-align: center;">
-        <input id="chatInput" type="text" style="padding:7px;border:1px solid darkgray; height:6%;width: 78%;border-radius: 7px;" placeholder="Type your message" onKeyPress="if( event.keyCode==13 ){inputText();}">
+        <input id="chatInput" type="text" style="padding:7px;border:1px solid darkgray; height:6%;width: 78%;border-radius: 7px;" placeholder="Type your message" onKeyPress="if( event.keyCode==13 ){sendAnswer();}">
         <button onclick="sendAnswer()"  class="btn btn-primary">Send</button>
         <button onclick="changeTo('menu')" class="btn btn-primary" style="width: 10%;">X</button>
     </div>
