Fix : Front - screne size for mobile

--- a/res/tutorChat.html
+++ b/res/tutorChat.html
@@ -14,8 +14,8 @@
 .chat-messages {
     display: flex;
     flex-direction: column;
-    height: 600px;
-    max-height: 600px;
+    height:85%;
+    max-height: 90%;
     overflow-y: scroll
 }
 
@@ -45,15 +45,15 @@
     flex-grow: 0!important;
 }
 .border-top {
+
     border-top: 1px solid #dee2e6!important;
 }
     </style>
-<body>
-<main class="content">
-<div class="container p-0">
-<h1 class="h3 mb-3">Messages</h1>
-<div class="card">
-<div class="row g-0">
+<main class="content" style="height:100%">
+<div class="container p-0" style="height:100%">
+<h1 class="h3 mb-3"></h1>
+<div class="card" style="height: 90%;">
+<div class="row g-0" style="height: 80%;">
 <div class="col-12 col-lg-5 col-xl-3 border-right">
 <div class="px-4 d-none d-md-block">
 <div class="d-flex align-items-center">
@@ -165,5 +165,3 @@ Time tutor
     window.document.getElementById("script2").onload=init();
 
 </script>
-
-</body>
