Fix : Front - screne size for mobile

--- a/res/tutorChat.html
+++ b/res/tutorChat.html
@@ -14,8 +14,8 @@
 .chat-messages {
     display: flex;
     flex-direction: column;
-    height:85%;
-    max-height: 90%;
+    height:92%;
+    max-height: 92%;
     overflow-y: scroll
 }
 
@@ -52,7 +52,7 @@
 <main class="content" style="height:100%">
 <div class="container p-0" style="height:100%">
 <h1 class="h3 mb-3"></h1>
-<div class="card" style="height: 90%;">
+<div class="card" style="height: 99%;">
 <div class="row g-0" style="height: 80%;">
 <div class="col-12 col-lg-5 col-xl-3 border-right">
 <div class="px-4 d-none d-md-block">
@@ -117,9 +117,9 @@ Time tutor
 
 <div class="flex-grow-0 py-3 px-4 border-top">
     <div class="input-group" id="qnaArea" style="text-align: center;">
-        <input id="chatInput" type="text" style="padding:7px;border:1px solid darkgray; height:6%;width: 78%;border-radius: 7px;" placeholder="Type your message" onKeyPress="if( event.keyCode==13 ){sendAnswer();}">
-        <button onclick="sendAnswer()"  class="btn btn-primary">Send</button>
-        <button onclick="changeTo('menu')" class="btn btn-primary" style="width: 10%;">X</button>
+        <input id="chatInput" type="text" style="padding:7px;border:1px solid darkgray; height:6%;width: 75%;border-radius: 7px;" placeholder="Type your message" onKeyPress="if( event.keyCode==13 ){sendAnswer();}">
+        <button onclick="sendAnswer()"  class="btn btn-primary" style="width: 14%;">Send</button>
+        <button onclick="changeTo('menu')" class="btn btn-primary" style="width: 7%;">X</button>
     </div>
     <div id="buttonMenueArea" style="text-align: center;">
         <button id="qnaMakingBtn" onclick="qnaMakingBtnClick()"class="btn btn-primary btn-lg mr-1 px-3"> Make QnA</button>
