Fix : front - decrease button size

--- a/res/tutorChat.html
+++ b/res/tutorChat.html
@@ -137,8 +137,8 @@ Time tutor
 <div class="flex-grow-0 py-3 px-4 border-top">
     <div class="input-group" id="qnaArea" style="text-align: center;">
         <input autocomplete='off' id="chatInput" type="text" style="padding:7px;border:1px solid darkgray; height:6%;width: 75%;border-radius: 7px;" placeholder="Type your message" onKeyPress="if( event.keyCode==13 ){sendAnswer();}">
-        <button onclick="sendAnswer()"  class="btn btn-primary" style="width: 14%;">Send</button>
-        <button onclick="changeTo('menu')" class="btn btn-primary" style="width: 7%;">X</button>
+        <button onclick="sendAnswer()"  class="btn btn-primary" style="width: 10%;">></button>
+        <button onclick="changeTo('menu')" class="btn btn-primary" style="width: 10%;">X</button>
     </div>
     <div id="buttonMenueArea" style="text-align: center;">
         <button id="qnaMakingBtn" onclick="qnaMakingBtnClick()"class="btn btn-primary btn-lg mr-1 px-3"> Make QnA</button>
