--- a/res/mainPage.html
+++ b/res/mainPage.html
@@ -56,7 +56,7 @@
           </li>
         </ul>
         <li class="nav-link active" id="welcomeText" style="display: none;">Welcome! </li>    
-		  <button class="btn btn-outline-success comming-soon">Signup</button>
+		  <button class="btn btn-outline-success" id="signupBtn">Signup</button>
           
           <span style="width: 10px;"></span>          
           <button class="btn btn-outline-success" id="loginBtn">Login</button>
